tests/snapshots/column_type_inference_tests__basic_type_inference.snap
---
source: tests/column_type_inference_tests.rs
expression: "schema.iter().map(|(k, v)|\n(k.clone(), format!(\"{:?}\", v))).collect::<Vec<_>>()"
---
- - id
  - Int64
- - name
  - String
- - age
  - Int64
- - email
  - String
- - active
  - Boolean
