tests/snapshots/column_type_inference_tests__date_type_inference.snap
---
source: tests/column_type_inference_tests.rs
expression: "schema.iter().map(|(k, v)|\n(k.clone(), format!(\"{:?}\", v))).collect::<Vec<_>>()"
---
- - id
  - Int64
- - created_at
  - String
- - birthday
  - String
- - timestamp
  - String
