tests/snapshots/column_type_inference_tests__geography_type_detection.snap
---
source: tests/column_type_inference_tests.rs
expression: "schema.iter().map(|(k, v)|\n(k.clone(), format!(\"{:?}\", v))).collect::<Vec<_>>()"
---
- - id
  - Int64
- - country
  - String
- - postal_code
  - String
- - region
  - String
