tests/snapshots/column_type_inference_tests__name_type_detection.snap
---
source: tests/column_type_inference_tests.rs
expression: "schema.iter().map(|(k, v)|\n(k.clone(), format!(\"{:?}\", v))).collect::<Vec<_>>()"
---
- - id
  - Int64
- - first_name
  - String
- - last_name
  - String
- - full_name
  - String
- - username
  - String
