tests/snapshots/column_type_inference_tests__null_handling.snap
---
source: tests/column_type_inference_tests.rs
expression: "schema.iter().map(|(k, v)|\n(k.clone(), format!(\"{:?}\", v))).collect::<Vec<_>>()"
---
- - id
  - Int64
- - optional_email
  - String
- - optional_number
  - Int64
- - mixed_nulls
  - String
