tests/snapshots/column_type_inference_tests__partial_scan_types.snap
---
source: tests/column_type_inference_tests.rs
expression: "schema.iter().map(|(k, v)|\n(k.clone(), format!(\"{:?}\", v))).collect::<Vec<_>>()"
---
- - id
  - Int64
- - category
  - String
- - value
  - Float64
